2012-03-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSSet.m: Some optimisation for set intersection.

2013-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSLocale/general.m,
	* Tests/base/NSTimeZone/use.m: Mark more tests that depend on
	locale setting as hopes.
	* Tests/base/GSXML/basic.m: Set the timezone of the GSXMLRPC to
	get the same date string in the output.

2012-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar:
	* Tools/gsdoc-1_0_0.dtd:
	* Tools/gsdoc-1_0_1.dtd:
	* Tools/gsdoc-1_0_2.dtd:
	* Tools/gsdoc-1_0_3.dtd:
	* Tools/gsdoc-0_6_5.dtd:
	* Tools/gsdoc-0_6_6.dtd:
	* Tools/gsdoc-0_6_7.dtd:
	* Tools/plist-0_9.dtd:
        Update/correct FSF address.

2012-03-16  reussandras@gmail.com

        * base/Source/NSCalendar.m:
        Add simple quarter calculation.
        * base/Source/NSPathUtilities.m:
        Fix bug handling defaults dir config (was treating absolute path
        as relative).

2012-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: Update timezone information

2012-03-16  Emmanuel Maillard <mailing-lists@e-maillard.com>

        * configure.ac: checks for pthread library and password structure
        * Headers/GNUstepBase/config.h.in: new define for password field
        * Source/NSPathUtilities.m: use new define
        * configure: regenerate
        Changes for Android build

2012-03-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSPrivate.h: Change hash function args and add new functions
        * for incremental hash.
        * Source/NSString.m: Update to use the private hash function introduced
        for NSSortdescriptor.
        * Source/GSString.m: ditto.
        * Source/NSSortDescriptor.m: Update for new function arguments.
        * Source/GSPrivateHash.m: Add alternative version of hash functions
        (old code plus new public domain murmurhash3 code).
        * Source/GNUmakefile: Build alternative hash functions.